[package]
name = "openrouter_git_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
symbiont-runtime = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
git2 = "0.18"
serde_yaml = "0.9"
toml = "0.8"
tempfile = "3.0"

[[bin]]
name = "openrouter_git_agent"
path = "src/main.rs"